添加productJsApi合并页，微信内支付 js选择城市，只显示当前城市的区县，而不是全省的 客户端缓存，还是加上用户信息

--- a/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/Shop/productJsApi.cshtml
+++ b/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/Shop/productJsApi.cshtml
@@ -1,4 +1,8 @@
-﻿@model  HZSoft.Application.Entity.CustomerManage.TelphoneLiangEntity
+﻿@model HZSoft.Application.Entity.CustomerManage.TelphoneLiangEntity
+@{
+    ViewBag.Title = "微信支付";
+    var wxModel = ViewBag.WxModel as HZSoft.Application.Entity.WeChatManage.WFTWxModel;
+}
 <!doctype html>
 <html font-size="12px">
 <head>
