Entity TelphoneData,liang,liangH5添加品牌Brand Orders添加Remark DataService添加修改品牌信息的关联同步Brand
Service
Orders
entity.OrderSn添加判断，jsapi会提前生成订单编号，直接用提生成的，保持提交微信的一致
liang和liangH5导入添加Brand列赋值

views
修改TelphoneData，省市赋值，添加品牌
orders添加备注

webapp-con
修改点击号码跳转toInfo('{item.TelphoneID}','{host}')
toInfo判断是否是微信内部打开，jsapi页面
修改微信支付回调时间15s，改成6s
添加product和productJsApi页面
修改提交成功的编码，用来区分“什么”提交成功
-views
index添加function toInfo(id, host)，isWeiXin()
重新支付页面还跳转原来的order页面，添加支付宝
合并页product，添加品牌

--- a/HZSoft.Application/HZSoft.Application.Web/Areas/BaseManage/Views/TelphoneData/TelphoneDataForm.cshtml
+++ b/HZSoft.Application/HZSoft.Application.Web/Areas/BaseManage/Views/TelphoneData/TelphoneDataForm.cshtml
@@ -9,17 +9,6 @@
     });
     //初始化控件
     function initControl() {
-        //获取表单
-        if (!!keyValue) {
-            $.SetForm({
-                url: "../../BaseManage/TelphoneData/GetFormJson",
-                param: { keyValue: keyValue },
-                success: function (data) {
-                    $("#form1").SetWebControls(data);
-                }
-            })
-        }
-
         //省份
         $("#ProvinceId").ComboBox({
             url: "../../SystemManage/Area/GetAreaListJson",
@@ -58,6 +47,18 @@
             description: "==请选择==",
             height: "200px"
         });
+        //获取表单
+        if (!!keyValue) {
+            $.SetForm({
+                url: "../../BaseManage/TelphoneData/GetFormJson",
+                param: { keyValue: keyValue },
+                success: function (data) {
+                    $("#form1").SetWebControls(data);
+                    $("#ProvinceId").trigger("change");
+                    $("#CityId").ComboBoxSetValue(data.CityId)
+                }
+            })
+        }
     }
     //保存表单;
     function AcceptClick() {
@@ -88,8 +89,8 @@
             <td class="formValue">
                 <div id="ProvinceId" type="select" class="ui-select" style="float: left; width: 180px; margin-right: 1px;"></div>
                 <div id="CityId" type="select" class="ui-select" style="float: left; width: 180px; margin-right: 1px;"></div>
-                <input id="Province" type="hidden" class="form-control"  isvalid="yes" checkexpession="NotNull"/>
-                <input id="City" type="hidden" class="form-control"  isvalid="yes" checkexpession="NotNull"/>
+                <input id="Province" type="hidden" class="form-control" isvalid="yes" checkexpession="NotNull" />
+                <input id="City" type="hidden" class="form-control" isvalid="yes" checkexpession="NotNull" />
             </td>
         </tr>
         <tr>
@@ -97,6 +98,12 @@
             <td class="formValue">
                 @*<input id="Operate" type="text" class="form-control" isvalid="yes" checkexpession="NotNull" />*@
                 <div id="Operate" type="select" class="ui-select" isvalid="yes" checkexpession="NotNull"></div>
+            </td>
+        </tr>
+        <tr>
+            <td class="formTitle">品牌<font face="宋体">*</font></td>
+            <td class="formValue">
+                <input id="Brand" type="text" class="form-control" isvalid="yes" checkexpession="NotNull" />
             </td>
         </tr>
         @*<tr>
