--- a/HZSoft.Application/HZSoft.Application.Web/Areas/BaseManage/Views/TelphoneData/TelphoneDataIndex.cshtml
+++ b/HZSoft.Application/HZSoft.Application.Web/Areas/BaseManage/Views/TelphoneData/TelphoneDataIndex.cshtml
@@ -32,7 +32,8 @@
                 { label: 'ºÅ¶Î', name: 'Number7', index: 'Number7', width: 200, align: 'center',sortable: true  },
                 { label: 'Ê¡·Ý', name: 'Province', index: 'Province', width: 100, align: 'left',sortable: true  },
                 { label: 'ÊÐ', name: 'City', index: 'City', width: 100, align: 'left',sortable: true  },
-                { label: 'ÍøÂç', name: 'Operate', index: 'Operate', width: 100, align: 'left',sortable: true  },
+                { label: 'ÍøÂç', name: 'Operate', index: 'Operate', width: 100, align: 'left', sortable: true },
+                { label: 'Æ·ÅÆ', name: 'Brand', index: 'Brand', width: 100, align: 'left', sortable: true },
                 //{ label: 'ÇøºÅ', name: 'Areacode', index: 'Areacode', width: 100, align: 'left',sortable: true  },
                 //{ label: 'ÓÊ±à', name: 'Zipcode', index: 'Zipcode', width: 100, align: 'left',sortable: true  },
                 { label: '±¸×¢', name: 'Description', index: 'Description', width: 100, align: 'left',sortable: true  },
