--- a/HZSoft.Application/HZSoft.Application.Web/Areas/CustomerManage/Views/Orders/OrdersIndex.cshtml
+++ b/HZSoft.Application/HZSoft.Application.Web/Areas/CustomerManage/Views/Orders/OrdersIndex.cshtml
@@ -70,7 +70,8 @@
                 { label: '省', name: 'Province', index: 'Province', width: 100, align: 'center',sortable: true  },
                 { label: '市', name: 'City', index: 'City', width: 100, align: 'center',sortable: true  },
                 { label: '区', name: 'Country', index: 'Country', width: 100, align: 'center',sortable: true  },
-                { label: '详细地址', name: 'Address', index: 'Address', width: 200, align: 'left',sortable: true  },
+                { label: '详细地址', name: 'Address', index: 'Address', width: 200, align: 'left', sortable: true },
+                { label: '备注', name: 'remark', index: 'remark', width: 150, align: 'left', sortable: true },
                 { label: '发货人', name: 'DeliveryName', index: 'DeliveryName', width: 100, align: 'center',sortable: true  },
                 { label: '发货时间', name: 'DeliveryDate', index: 'DeliveryDate', width: 80, align: 'left',sortable: true  },
                 { label: '快递公司', name: 'ExpressCompany', index: 'ExpressCompany', width: 100, align: 'center',sortable: true  },
