--- a/HZSoft.Application/HZSoft.Application.Web/Areas/CustomerManage/Views/TelphoneLiangH5/TelphoneLiangH5Index.cshtml
+++ b/HZSoft.Application/HZSoft.Application.Web/Areas/CustomerManage/Views/TelphoneLiangH5/TelphoneLiangH5Index.cshtml
@@ -73,6 +73,7 @@
                         return top.clientdataItem["yys"][cellvalue] == undefined ? "" : top.clientdataItem["yys"][cellvalue];
                     }
                 },
+                { label: '品牌', name: 'Brand', index: 'Brand', width: 70, align: 'left', sortable: true },
                 { label: '售价', name: 'Price', index: 'Price', width: 80, align: 'left', sortable: true },
                 { label: '成本价', name: 'MinPrice', index: 'MinPrice', width: 80, align: 'left', sortable: true },
                 { label: '利润', name: 'ChaPrice', index: 'ChaPrice', width: 80, align: 'left', sortable: true },
