--- a/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/jinan/Index.cshtml
+++ b/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/jinan/Index.cshtml
@@ -570,53 +570,53 @@
             <!--city end-->
             <!--company begin-->
             @*<div class="company hide">
-                <div class="left">
-                    <ul>
-                        <li data-companyid="0" data-companyname="" class="cur">全部</li>
+                    <div class="left">
+                        <ul>
+                            <li data-companyid="0" data-companyname="" class="cur">全部</li>
 
-                        <li data-companyid="19" data-companyname="移动网络">移动网络</li>
+                            <li data-companyid="19" data-companyname="移动网络">移动网络</li>
 
-                        <li data-companyid="20" data-companyname="联通网络">联通网络</li>
+                            <li data-companyid="20" data-companyname="联通网络">联通网络</li>
 
-                        <li data-companyid="21" data-companyname="电信网络">电信网络</li>
+                            <li data-companyid="21" data-companyname="电信网络">电信网络</li>
 
-                    </ul>
-                </div>
-                <div class="right">
-                    <ul>
-                        <li data-companyid="0" data-prefixnum="">全部</li>
+                        </ul>
+                    </div>
+                    <div class="right">
+                        <ul>
+                            <li data-companyid="0" data-prefixnum="">全部</li>
 
-                        <li data-companyid="21" data-prefixnum="162">162</li>
+                            <li data-companyid="21" data-prefixnum="162">162</li>
 
-                        <li data-companyid="19" data-prefixnum="165">165</li>
+                            <li data-companyid="19" data-prefixnum="165">165</li>
 
-                        <li data-companyid="20" data-prefixnum="167">167</li>
+                            <li data-companyid="20" data-prefixnum="167">167</li>
 
-                        <li data-companyid="21" data-prefixnum="1700">1700</li>
+                            <li data-companyid="21" data-prefixnum="1700">1700</li>
 
-                        <li data-companyid="21" data-prefixnum="1701">1701</li>
+                            <li data-companyid="21" data-prefixnum="1701">1701</li>
 
-                        <li data-companyid="21" data-prefixnum="1702">1702</li>
+                            <li data-companyid="21" data-prefixnum="1702">1702</li>
 
-                        <li data-companyid="19" data-prefixnum="1703">1703</li>
+                            <li data-companyid="19" data-prefixnum="1703">1703</li>
 
-                        <li data-companyid="20" data-prefixnum="1704">1704</li>
+                            <li data-companyid="20" data-prefixnum="1704">1704</li>
 
-                        <li data-companyid="19" data-prefixnum="1705">1705</li>
+                            <li data-companyid="19" data-prefixnum="1705">1705</li>
 
-                        <li data-companyid="19" data-prefixnum="1706">1706</li>
+                            <li data-companyid="19" data-prefixnum="1706">1706</li>
 
-                        <li data-companyid="20" data-prefixnum="1707">1707</li>
+                            <li data-companyid="20" data-prefixnum="1707">1707</li>
 
-                        <li data-companyid="20" data-prefixnum="1708">1708</li>
+                            <li data-companyid="20" data-prefixnum="1708">1708</li>
 
-                        <li data-companyid="20" data-prefixnum="1709">1709</li>
+                            <li data-companyid="20" data-prefixnum="1709">1709</li>
 
-                        <li data-companyid="20" data-prefixnum="171">171</li>
+                            <li data-companyid="20" data-prefixnum="171">171</li>
 
-                    </ul>
-                </div>
-            </div>*@
+                        </ul>
+                    </div>
+                </div>*@
             <!--company end-->
             <!--featrue begin-->
             <div class="featrue hide">
@@ -730,161 +730,161 @@
                 <div id="custom-price-box"><span>您能接受的价格范围</span><input type="number" id="lowprice" class="input-text" placeholder="最低价"> - <input type="number" id="topprice" class="input-text" placeholder="最高价"></div>
 
                 @*<div class="tit">分类</div>
-                <ul class="clearfix cat">
+                    <ul class="clearfix cat">
 
-                    <li data-val="13">蜗牛</li>
+                        <li data-val="13">蜗牛</li>
 
-                    <li data-val="14">民生</li>
+                        <li data-val="14">民生</li>
 
-                    <li data-val="15">中麦</li>
+                        <li data-val="15">中麦</li>
 
-                    <li data-val="16">长城</li>
+                        <li data-val="16">长城</li>
 
-                    <li data-val="17">长江时代</li>
+                        <li data-val="17">长江时代</li>
 
-                    <li data-val="18">河马</li>
+                        <li data-val="18">河马</li>
 
-                    <li data-val="19">中兴</li>
+                        <li data-val="19">中兴</li>
 
-                    <li data-val="20">蓝猫</li>
+                        <li data-val="20">蓝猫</li>
 
-                    <li data-val="21">三五</li>
+                        <li data-val="21">三五</li>
 
-                    <li data-val="22">连连科技</li>
+                        <li data-val="22">连连科技</li>
 
-                    <li data-val="23">分享</li>
+                        <li data-val="23">分享</li>
 
-                    <li data-val="24">天音</li>
+                        <li data-val="24">天音</li>
 
-                    <li data-val="38">话机世界</li>
+                        <li data-val="38">话机世界</li>
 
-                    <li data-val="44">263</li>
+                        <li data-val="44">263</li>
 
-                    <li data-val="46">日日顺</li>
+                        <li data-val="46">日日顺</li>
 
-                    <li data-val="47">用友</li>
+                        <li data-val="47">用友</li>
 
-                    <li data-val="50">京东</li>
+                        <li data-val="50">京东</li>
 
-                    <li data-val="51">联想</li>
+                        <li data-val="51">联想</li>
 
-                    <li data-val="52">爱施德</li>
+                        <li data-val="52">爱施德</li>
 
-                    <li data-val="53">鹏博士</li>
+                        <li data-val="53">鹏博士</li>
 
-                    <li data-val="25">小米</li>
+                        <li data-val="25">小米</li>
 
-                    <li data-val="26">银盛</li>
+                        <li data-val="26">银盛</li>
 
-                    <li data-val="27">迪加</li>
+                        <li data-val="27">迪加</li>
 
-                    <li data-val="28">中邮</li>
+                        <li data-val="28">中邮</li>
 
-                    <li data-val="29">华翔</li>
+                        <li data-val="29">华翔</li>
 
-                    <li data-val="30">国美</li>
+                        <li data-val="30">国美</li>
 
-                    <li data-val="31">星美</li>
+                        <li data-val="31">星美</li>
 
-                    <li data-val="32">U友</li>
+                        <li data-val="32">U友</li>
 
-                    <li data-val="33">全民优打</li>
+                        <li data-val="33">全民优打</li>
 
-                    <li data-val="34">远特</li>
+                        <li data-val="34">远特</li>
 
-                    <li data-val="35">苏宁</li>
+                        <li data-val="35">苏宁</li>
 
-                    <li data-val="36">丰信</li>
+                        <li data-val="36">丰信</li>
 
-                    <li data-val="43">海尔</li>
+                        <li data-val="43">海尔</li>
 
-                    <li data-val="48">263通讯</li>
+                        <li data-val="48">263通讯</li>
 
-                    <li data-val="37">青牛</li>
+                        <li data-val="37">青牛</li>
 
-                    <li data-val="39">红豆</li>
+                        <li data-val="39">红豆</li>
 
-                    <li data-val="40">朗玛</li>
+                        <li data-val="40">朗玛</li>
 
-                    <li data-val="41">北纬</li>
+                        <li data-val="41">北纬</li>
 
-                    <li data-val="42">中期</li>
+                        <li data-val="42">中期</li>
 
-                    <li data-val="45">乐语</li>
+                        <li data-val="45">乐语</li>
 
-                    <li data-val="12">海航</li>
+                        <li data-val="12">海航</li>
 
-                </ul>
+                    </ul>
 
-                <div class="tit" id="tit-yuyi">寓意</div>
-                <ul class="clearfix yuyi" id="li-yuyi">
+                    <div class="tit" id="tit-yuyi">寓意</div>
+                    <ul class="clearfix yuyi" id="li-yuyi">
 
-                    <li data-val="">不限</li>
+                        <li data-val="">不限</li>
 
-                    <li data-val="3">后5位1349</li>
+                        <li data-val="3">后5位1349</li>
 
-                    <li data-val="4">后5位2678</li>
+                        <li data-val="4">后5位2678</li>
 
-                    <li data-val="5">全号1349</li>
+                        <li data-val="5">全号1349</li>
 
-                    <li data-val="6">全号2678</li>
+                        <li data-val="6">全号2678</li>
 
-                    <li data-val="7">全号01349</li>
+                        <li data-val="7">全号01349</li>
 
-                    <li data-val="8">尾数520</li>
+                        <li data-val="8">尾数520</li>
 
-                </ul>*@
+                    </ul>*@
                 @*<div class="tit">排除</div>
-                <ul class="clearfix except">
+                    <ul class="clearfix except">
 
-                    <li class="ckb-item" data-val="" style="display: none;">不限</li>
+                        <li class="ckb-item" data-val="" style="display: none;">不限</li>
 
-                    <li class="ckb-item" data-val="e0">不带0</li>
+                        <li class="ckb-item" data-val="e0">不带0</li>
 
-                    <li class="ckb-item" data-val="e2">不带2</li>
+                        <li class="ckb-item" data-val="e2">不带2</li>
 
-                    <li class="ckb-item" data-val="e3">不带3</li>
+                        <li class="ckb-item" data-val="e3">不带3</li>
 
-                    <li class="ckb-item" data-val="e4">不带4</li>
+                        <li class="ckb-item" data-val="e4">不带4</li>
 
-                    <li class="ckb-item" data-val="e5">不带5</li>
+                        <li class="ckb-item" data-val="e5">不带5</li>
 
-                    <li class="ckb-item" data-val="e6">不带6</li>
+                        <li class="ckb-item" data-val="e6">不带6</li>
 
-                    <li class="ckb-item" data-val="e7">不带7</li>
+                        <li class="ckb-item" data-val="e7">不带7</li>
 
-                    <li class="ckb-item" data-val="e8">不带8</li>
+                        <li class="ckb-item" data-val="e8">不带8</li>
 
-                    <li class="ckb-item" data-val="e9">不带9</li>
+                        <li class="ckb-item" data-val="e9">不带9</li>
 
-                </ul>*@
+                    </ul>*@
                 @*<div class="tit">数字较多</div>
-                <ul class="clearfix moreNumber">
+                    <ul class="clearfix moreNumber">
 
-                    <li data-val="">全部</li>
+                        <li data-val="">全部</li>
 
-                    <li data-val="n9">9较多</li>
+                        <li data-val="n9">9较多</li>
 
-                    <li data-val="n8">8较多</li>
+                        <li data-val="n8">8较多</li>
 
-                    <li data-val="n7">7较多</li>
+                        <li data-val="n7">7较多</li>
 
-                    <li data-val="n6">6较多</li>
+                        <li data-val="n6">6较多</li>
 
-                    <li data-val="n5">5较多</li>
+                        <li data-val="n5">5较多</li>
 
-                    <li data-val="n4">4较多</li>
+                        <li data-val="n4">4较多</li>
 
-                    <li data-val="n3">3较多</li>
+                        <li data-val="n3">3较多</li>
 
-                    <li data-val="n2">2较多</li>
+                        <li data-val="n2">2较多</li>
 
-                    <li data-val="n1">1较多</li>
+                        <li data-val="n1">1较多</li>
 
-                    <li data-val="n0">0较多</li>
+                        <li data-val="n0">0较多</li>
 
-                </ul>
-                <div style="height:40px;"></div>*@
+                    </ul>
+                    <div style="height:40px;"></div>*@
                 <div class="filter-more-btn" style="bottom: 40px;">
                     <div class="reset">重置</div>
                     <div class="submit">确定</div>
@@ -894,8 +894,8 @@
         </div>
         <!--new filter pop end-->
         @*<a class="search-reset-m" href="/webapp/Shop/Index">
-            <img src="~/webapp/img/icon/ref3.png" />
-        </a>*@
+                <img src="~/webapp/img/icon/ref3.png" />
+            </a>*@
     </div>
     <div class="mask hide"></div>
 
@@ -1464,5 +1464,24 @@
         });
     </script>
 
+    <script type="text/javascript">
+        function toInfo(id, host) {
+            if (isWeiXin()) {
+                location.href = 'https://shop.jnlxsm.net/webapp/jinan/productJsApi/' + id + '?host=' + host;
+            }
+            else {
+                location.href = 'https://shop.jnlxsm.net/webapp/jinan/product/' + id + '?host=' + host;
+            }
+        }
+
+        function isWeiXin() {
+            var ua = window.navigator.userAgent.toLowerCase();
+            if (ua.match(/MicroMessenger/i) == 'micromessenger') {
+                return true;
+            } else {
+                return false;
+            }
+        }
+    </script>
 </body>
 </html>
