--- a/HZSoft.Application/HZSoft.Application.Web/Areas/CustomerManage/Views/TelphoneLiang/TelphoneLiangMaxIndex.cshtml
+++ b/HZSoft.Application/HZSoft.Application.Web/Areas/CustomerManage/Views/TelphoneLiang/TelphoneLiangMaxIndex.cshtml
@@ -80,6 +80,7 @@
                         return top.clientdataItem["yys"][cellvalue] == undefined ? "" : top.clientdataItem["yys"][cellvalue];
                     }
                 },
+                { label: '品牌', name: 'Brand', index: 'Brand', width: 70, align: 'left', sortable: true },
                 { label: '最高价', name: 'MaxPrice', index: 'MaxPrice', width: 80, align: 'left', sortable: true },
                 { label: '售价', name: 'Price', index: 'Price', width: 80, align: 'left', sortable: true },
                 { label: '最低价', name: 'MinPrice', index: 'MinPrice', width: 80, align: 'left', sortable: true },
