--- a/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/Shop/product.cshtml
+++ b/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/Shop/product.cshtml
@@ -39,6 +39,7 @@
                     <span class="phone-loc mobile-box-span">
                         <span>@Model.City</span>
                         <span>@Model.Operator</span>
+                        <span>(@Model.Brand)</span>
                     </span>
                 </div>
 
@@ -76,10 +77,6 @@
                         <label>姓名(必填)</label>
                         <input type="text" class="mui-input-clear name " placeholder="请输入真实姓名" required="" data-input-clear="1"><span class="mui-icon mui-icon-clear mui-hidden"></span>
                     </div>
-
-
-
-
                     <div class="mui-input-row">
                         <label>手机(必填)</label>
                         <input type="text" class="mui-input-clear mobile" placeholder="输入您的电话" maxlength="11" data-input-clear="3"><span class="mui-icon mui-icon-clear mui-hidden"></span>
