--- a/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/jinan/mobileorder.cshtml
+++ b/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/jinan/mobileorder.cshtml
@@ -116,7 +116,7 @@
                 <input type="radio" class="weui-check" value="wechat" name="paytype" id="x11" checked="checked"><span class="weui-icon-checked"></span>
             </div>
         </label>
-        @*<label class="weui-cell weui-check__label" for="x12">
+        <label class="weui-cell weui-check__label" for="x12">
             <div class="weui-cell__hd">
                 <img src="/themes/simplebootx_mobile/Public/images/zhifubao.png" width="20px">
             </div>
@@ -128,7 +128,7 @@
             <div class="weui-cell__ft">
                 <input type="radio" name="paytype" value="alipay" class="weui-check" id="x12"><span class="weui-icon-checked"></span>
             </div>
-        </label>*@
+        </label>
     </div>
     <div class="page-btn">
         <a href="#" id="submit" data-id="@ViewBag.id" class="weui-btn" style="background: #ee5246;">立即支付</a>
