--- a/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/jinan/product.cshtml
+++ b/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/jinan/product.cshtml
@@ -39,6 +39,7 @@
                     <span class="phone-loc mobile-box-span">
                         <span>@Model.City</span>
                         <span>@Model.Operator</span>
+                        <span>(@Model.Brand)</span>
                     </span>
                 </div>
 
