--- a/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/jntt/mobileinfo.cshtml
+++ b/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/jntt/mobileinfo.cshtml
@@ -31,7 +31,7 @@
 </head>
 <body class="page">
     <div class="page-title">
-        <a href="https://www.jnlxsm.net:447/webapp/Shop/Index"></a>
+        <a href="https://www.jnlxsm.net:447/webapp/jntt/Index"></a>
         <h1>号码详情</h1>
     </div>
     <div class="page-box">
