/webapp/shop改为/webapp/jntt

--- a/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/jntt/mobileorder.cshtml
+++ b/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/jntt/mobileorder.cshtml
@@ -37,7 +37,7 @@
 </head>
 <body class="page">
     <div class="page-title">
-        <a href="/webapp/shop/mobileinfo/@ViewBag.id?host=@ViewBag.host"><i class="-back"></i></a>
+        <a href="/webapp/jntt/mobileinfo/@ViewBag.id?host=@ViewBag.host"><i class="-back"></i></a>
         <h1>号码订购</h1>
     </div>
     <div class="weui-cells__title">
@@ -164,7 +164,7 @@
                             if (address) {
                                 $.ajax({
                                     type: "post",
-                                    url: "/webapp/shop/ajaxorder",
+                                    url: "/webapp/jntt/ajaxorder",
                                     data: {
                                         TelphoneID: id,
                                         Receiver: name,
@@ -218,7 +218,7 @@
                                                     text: qrsrc,
                                                     buttons: [
                                                         { text: "取消支付", className: "default", onClick: function () { $.hideLoading(); } },
-                                                        { text: "支付完成", onClick: function () { location.href = '/webapp/shop/paymentFinish/' + resObj.data.payid; } }
+                                                        { text: "支付完成", onClick: function () { location.href = '/webapp/jntt/paymentFinish/' + resObj.data.payid; } }
                                                     ]
                                                 });
                                                 //检测付款状态
