--- a/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/jntt/JsApi.cshtml
+++ b/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/jntt/JsApi.cshtml
@@ -41,7 +41,7 @@
 </head>
 <body class="page">
     <div class="page-title">
-        <a href="/webapp/shop/mobileinfo/@Model.TelphoneID"><i class="-back"></i></a>
+        <a href="/webapp/jntt/mobileinfo/@Model.TelphoneID"><i class="-back"></i></a>
         <h1>号码订购</h1>
     </div>
     <div class="weui-cells__title">
@@ -146,7 +146,7 @@
                             if (address) {
                                 $.ajax({
                                     type: "post",
-                                    url: "/webapp/shop/JsApi",
+                                    url: "/webapp/jntt/JsApi",
                                     data: {
                                         Id:@Model.Id,
                                         Receiver: name,
