--- a/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/jntt/mobileinfo.cshtml
+++ b/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/jntt/mobileinfo.cshtml
@@ -109,10 +109,10 @@
         $(function () {
             $('#submit').bind('click', function () {
                 if (isWeiXin()) {
-                    location.href = '/webapp/shop/jsapi/@Model.TelphoneID?Tel=@Model.Telphone&Price=@Model.Price&host=@ViewBag.host';
+                    location.href = '/webapp/jntt/jsapi/@Model.TelphoneID?Tel=@Model.Telphone&Price=@Model.Price&host=@ViewBag.host';
                 }
                 else {
-                    location.href = '/webapp/shop/mobileorder/@Model.TelphoneID?Tel=@Model.Telphone&Price=@Model.Price&host=@ViewBag.host';
+                    location.href = '/webapp/jntt/mobileorder/@Model.TelphoneID?Tel=@Model.Telphone&Price=@Model.Price&host=@ViewBag.host';
                 }
             });
         })
