www.jnlxsm.net:447改成 ghdh.digitdance.cn:806

--- a/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/jntt/express.cshtml
+++ b/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/jntt/express.cshtml
@@ -31,7 +31,7 @@
 <body>
     <div class="express">
         <div class="express-back">
-            <a href="https://www.jnlxsm.net:447/webapp/jntt/Index"></a>
+            <a href="https://ghdh.digitdance.cn:8069/webapp/jntt/Index"></a>
         </div>
         <h1 class="express-h1">快递查询</h1>
         <div class="express-box">
