--- a/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/jinan/productJsApi.cshtml
+++ b/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/jinan/productJsApi.cshtml
@@ -104,7 +104,7 @@
                     <span class="gateway-span  gateway-title">支付方式</span>
                     <span class="gateway-span gateway  selected" data-value="wechat"><img src="/imgs/wechatpay.png"><span class="gateway-text">微信</span></span>
 
-                    @*<span class="gateway-span gateway alipay not-selected" data-value="alipay"><img src="/imgs/alipay.png"><span class="gateway-text">支付宝</span></span>*@
+                    <span class="gateway-span gateway alipay not-selected" data-value="alipay"><img src="/imgs/alipay.png"><span class="gateway-text">支付宝</span></span>
                 </div>
             </div>
         </div>
