--- a/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/jinan2/productJsApi.cshtml
+++ b/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/jinan2/productJsApi.cshtml
@@ -397,7 +397,7 @@
                         Tel:@Model.Telphone,
                         Price:@Model.Price,
                         PC: IsPC(),
-                        Host: '@ViewBag.host'
+                        Host: '@ViewBag.host',
                         OrderSn: '@ViewBag.OrderSn'
                     },
                     cache: false,
