--- a/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/Shop/product.cshtml
+++ b/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/Shop/product.cshtml
@@ -146,8 +146,6 @@
     </div>
 
 
-
-    </div>
     <div class="mask"></div>
     <div style="display: none;">
         <script type="text/javascript" src="https://s4.cnzz.com/z_stat.php?id=1278862551&web_id=1278862551"></script>
@@ -155,7 +153,7 @@
     <script src="https://cdn.staticfile.org/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.staticfile.org/mui/3.7.1/js/mui.min.js"></script>
 
-    <script src="/themes/simplebootx_mobile/Public/js/jquery.min.js"></script>
+    <link rel="stylesheet" href="/themes/simplebootx_mobile/Public/css/weui.min.css">
     <script src="/themes/simplebootx_mobile/Public/js/jquery-weui.min.js"></script>
 
     <script>
@@ -352,6 +350,24 @@
 
 
             $('.order-submit').click(function () {
+                //$.modal({
+                //    title: "此号码已被使用",
+                //    text: "请使用未被bai使用的手机号码du进行注册，zhi你可以更换号码或直接dao使用此号码登录",
+                //    buttons: [
+                //        {
+                //            text: "更换号码", onClick: function () {
+                //                $("#tel").val("");
+                //                $("#tel").attr("placeholder", "请输入手机号码");
+                //            }
+                //        },
+                //        {
+                //            text: "使用此号码登录", onClick: function () {
+                //                window.location.href = base_path + "wechat/portal/promotion/hongbao/wechat-login.jsp";
+                //            }
+                //        },
+                //    ]
+                //});
+
                 document.body.scrollTop = document.documentElement.scrollTop = 0
 
                 let name = $('.name').val();
