--- a/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/jinan2/product.cshtml
+++ b/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/jinan2/product.cshtml
@@ -159,7 +159,7 @@
     <script src="https://cdn.staticfile.org/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.staticfile.org/mui/3.7.1/js/mui.min.js"></script>
 
-    <script src="/themes/simplebootx_mobile/Public/js/jquery.min.js"></script>
+    <link rel="stylesheet" href="/themes/simplebootx_mobile/Public/css/weui.min.css">
     <script src="/themes/simplebootx_mobile/Public/js/jquery-weui.min.js"></script>
 
     <script>
@@ -326,7 +326,7 @@
                                 lihtml = lihtml.replace(/__CID__/g, v.adcode);
                                 html += lihtml;
                             }
-                            
+
                         });
                         target.empty();
                         target.append(html);
