添加域名搜索Host 头条靓号库去掉无用按钮

--- a/HZSoft.Application/HZSoft.Application.Web/Areas/CustomerManage/Views/Orders/OrdersIndex.cshtml
+++ b/HZSoft.Application/HZSoft.Application.Web/Areas/CustomerManage/Views/Orders/OrdersIndex.cshtml
@@ -278,6 +278,12 @@
                                     </td>
                                 </tr>
                                 <tr>
+                                    <td class="formTitle">域名：</td>
+                                    <td class="formValue">
+                                        <input id="Host" type="text" class="form-control">
+                                    </td>
+                                </tr>
+                                <tr>
                                     <td class="formTitle">收件人：</td>
                                     <td class="formValue">
                                         <input id="Receiver" type="text" class="form-control">
