--- a/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/jntt2/productJsApi.cshtml
+++ b/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/jntt2/productJsApi.cshtml
@@ -27,7 +27,7 @@
                 js.src = "https://analytics.snssdk.com/meteor.js/v1/" + l + "/sdk"; fjs.parentNode.insertBefore(js, fjs)
             }; meteor.load(); if (meteor.invoked) { return }
             meteor.invoked = true; meteor.track("pageview")
-        })(window, document, "script", "1664007157743627");
+        })(window, document, "script", "1668913919412232");
     </script>
     <!-- End Bytedance Tracking -->
 
@@ -386,7 +386,7 @@
                 }
                 $('.mask_dl').show();
                 $.ajax({
-                    url: "/webapp/shop/ajaxorder",
+                    url: "/webapp/jntt2/ajaxorder",
                     type: 'post',
                     dataType: 'json',
                     data: {
@@ -405,7 +405,7 @@
                         if (resObj.status) {
                             //头条推广转化（点击支付）
                             //埋点
-                            meteor.track("form", { convert_id: "1667100208827405" })
+                            meteor.track("form", { convert_id: "1668988761072648" })
                             //JSApi支付
                             WeixinJSBridge.invoke(
                             'getBrandWCPayRequest', {
