TelphoneService： SaveForm与导入模板同步，添加号段城市为空判断、Brand品牌 BatchAddEntity批量导入，重复号码continue跳过，返回结果为重复多少，导入多少

--- a/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/Shop/product.cshtml
+++ b/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/Shop/product.cshtml
@@ -1,4 +1,4 @@
-﻿@model  HZSoft.Application.Entity.CustomerManage.TelphoneLiangEntity
+﻿@model  HZSoft.Application.Entity.CustomerManage.TelphoneLiangH5Entity
 <!doctype html>
 <html font-size="12px">
 <head>
