--- a/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/jinan2/product.cshtml
+++ b/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/jinan2/product.cshtml
@@ -1,4 +1,4 @@
-﻿@model  HZSoft.Application.Entity.CustomerManage.TelphoneLiangEntity
+﻿@model  HZSoft.Application.Entity.CustomerManage.TelphoneLiangH5Entity
 <!doctype html>
 <html font-size="12px">
 <head>
