--- a/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/mwd2/productJsApi.cshtml
+++ b/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/mwd2/productJsApi.cshtml
@@ -1,4 +1,4 @@
-﻿@model HZSoft.Application.Entity.CustomerManage.TelphoneLiangEntity
+﻿@model HZSoft.Application.Entity.CustomerManage.TelphoneLiangH5Entity
 @{
     ViewBag.Title = "微信支付";
     var wxModel = ViewBag.WxModel as HZSoft.Application.Entity.WeChatManage.WFTWxModel;
